2004-03-23  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* Documentation/user/changing-defaults.itely (Determining a grob
	property):  new node.
	(Layout interfaces): new node.
	(Navigating the program reference): new node.

	* lily/accidental-engraver.cc (acknowledge_grob): add property
	harmonicAccidentals

	* lily/piano-pedal-engraver.cc (del_linespanner): new function.
	general cleanups.
	
	* input/les-nereides.ly (middleDynamics): resurrect Les
	nereides. Remove pedal hack.

2004-03-22  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* input/regression/property-grace-polyphony.ly: new file.

	* lily/translator-property.cc (execute_pushpop_property): only pop
	one instance of the property. This fixes << \\ >> together with
	\grace.

	* lily/break-align-interface.cc (ordered_elements): we cannot
	modify the #'elements property, so return reordered array.

2004-03-23  Heikki Junes  <hjunes@cc.hut.fi>

	* buildscripts/lilypond.words.py: remove.
	* buildscripts/lilypond-words.py: add new, renamed file. 
	Give generated targets and dirs explicitly in arguments.

	* GNUmakefile.in, elisp/GNUmakefile, elisp/lilypond-init.el,
	elisp/lilypond-mode.el, vim/lilypond-ftplugin.vim,
	vim/lilypond-syntax.vim: update to use new lilypond-words.py.
 	
	* config.make.in: give '/usr/share/vim' explicitly as $(vimdir).

	* vim/GNUmakefile: use --words and --vim targets in lilypond-words.py

	* Documentation/topdocs/INSTALL.texi: update vim-mode installing orders.

	* vim/GNUmakefile: add local-uninstall target.

	* Documentation/topdocs/INSTALL.texi: give even more detailed orders.
	
	* vim/vimrc: add a one-liner file.

	* vim/GNUmakefile: try to remove empty dirs during uninstalling, put
	vimrc in EXTRA_DIST_FILES.

2004-03-22  Heikki Junes  <hjunes@cc.hut.fi>

        * config.make.in: add vimdir.

        * vim/GNUmakefile: add local-install.

2004-03-22  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* tex/titledefs.tex: Replaced \ifx\blabla\undefined