@@ -7381,7 +7381,7 @@ used in music for beginners:
 The command @code{\setEasyHeads} overrides settings for the
 @internalsref{NoteHead} object.  To make the letters readable, it has
 to be printed in a large font size.  To print with a larger font, see
-@ref{Font Size}.
+@ref{Setting global staff size}.
 
 @cindex Xdvi
 @cindex ghostscript
