@@ -285,14 +285,12 @@ main_with_guile (void *, int, char **)
   bool first = true;
   while (char const *arg = option_parser->get_next_arg ())
     {
-  
 #if 0
       /* Code to debug memory leaks.  Cannot call from within .ly
 	 since then we get the protects from the parser state too.  */
       scm_gc ();
       scm_call_0 (ly_scheme_function ("dump-gc-protects"));
 #endif
-      
       do_one_file (arg);
       first = false;
     }
