@@ -4,6 +4,15 @@ INSTALLATION_OUT_DIR=$(vimdir)/syntax
 INSTALLATION_OUT_FILES=$(LILYPOND_WORDS)
 # $(outdir)/lilypond-words $(outdir)/lilypond-words.el
 
+EXTRA_DIST_FILES=$(wildcard *.vim) vimrc
+
+LILYPOND_WORDS = $(outdir)/lilypond-words $(outdir)/lilypond-words.vim
+LILYPOND_WORDS_DEPENDS =\
+  $(topdir)/lily/my-lily-lexer.cc \
+  $(buildscript-dir)/lilypond-words.py \
+  $(topdir)/scm/new-markup.scm \
+  $(topdir)/ly/engraver-init.ly
+
 STEPMAKE_TEMPLATES=install-out
 
 # vimdir defined in config.make
@@ -40,15 +49,6 @@ local-uninstall:
 
 	rm $(vimdir)/syntax/lilypond.vim
 	rmdir -p $(vimdir)/syntax
-
-EXTRA_DIST_FILES=filetype.vim vimrc
-
-LILYPOND_WORDS = $(outdir)/lilypond-words $(outdir)/lilypond-words.vim
-LILYPOND_WORDS_DEPENDS =\
-  $(topdir)/lily/my-lily-lexer.cc \
-  $(buildscript-dir)/lilypond-words.py \
-  $(topdir)/scm/new-markup.scm \
-  $(topdir)/ly/engraver-init.ly
 
 $(LILYPOND_WORDS): 
 	cd $(topdir) && $(PYTHON) buildscripts/lilypond-words.py --words --vim --dir=$(builddir)/vim/$(outconfbase)
