@@ -1,5 +1,13 @@
 2004-03-23  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* lily/main.cc (main_with_guile): switch debugging.
+
+	* lily/system.cc (get_line): plug leak.
+
+	* lily/paper-book.cc (pages): plug memory leaks: delete page array
+	and contents.
+	(stencil2line): plug leak.
+
 	* Documentation/user/changing-defaults.itely (Determining a grob
 	property):  new node.
 	(Layout interfaces): new node.
